# PLERIO

./: README.md  pyproject.toml  setup.py  simplified_single_protein_inference.ipynb
engine/: single_protein_pipeline.py
engine/dataconstruction_utils/: dataframe_holder.py  kmer_counting.py  peak_processing.py  prepare_single_protein_dataset.py  train_val_test_splitting.py
engine/inference_utils/: multi_protein_model_inference.py  single_protein_model_inference.py
engine/training_utils/: model_training.py
plerio.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
plerio/engine/dataconstruction_utils/: kmer_counting.py  negatives_generation.py  pickling_batches.py  sequence_extraction.py  single_protein_dataset_preparation.py
plerio/engine/inference_utils/: single_protein_model_inference.py
single_prot_models/HepG2/AGGF1/: FCNN_model.pt  metrics.pkl
single_prot_models/HepG2/AKAP1/: FCNN_model.pt  metrics.pkl
single_prot_models/HepG2/AQR/: FCNN_model.pt  metrics.pkl
single_prot_models/HepG2/BCCIP/: FCNN_model.pt  metrics.pkl
single_prot_models/HepG2/BCLAF1/: FCNN_model.pt  metrics.pkl
single_prot_models/HepG2/BUD13/: FCNN_model.pt  metrics.pkl
single_prot_models/HepG2/CDC40/: FCNN_model.pt  metrics.pkl
single_prot_models/HepG2/CSTF2/: FCNN_model.pt  metrics.pkl
single_prot_models/HepG2/CSTF2T/: FCNN_model.pt  metrics.pkl
single_prot_models/HepG2/DDX3X/: FCNN_model.pt  metrics.pkl
single_prot_models/HepG2/DDX52/: FCNN_model.pt  metrics.pkl
single_prot_models/K562/: FASTKD2.pt  RBM22.pt
single_prot_models/adrenal/: AARS.pt
(+425 files in other folders)
