[project]
name = "plerio"
version = "0.0.1"
authors = [
  { name="Arseniy Rybakov", email="irisunikova@gmail.com" },
]
description = "Library for PLERIO."
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["plerio"]
exclude = [] 
namespaces = false
